[gd_scene load_steps=8 format=3 uid="uid://bp2vm8gfhx645"]

[ext_resource type="Script" path="res://Scripts/portal.gd" id="1_h72f4"]
[ext_resource type="Shader" path="res://Resources/Magic.gdshader" id="2_53ve7"]
[ext_resource type="Texture2D" uid="uid://cx8srk2ogugdj" path="res://Assets/portal.png" id="2_wwjib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3iwj"]
size = Vector2(128, 128)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_oph43"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6c5di"]
noise = SubResource("FastNoiseLite_oph43")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m7ld3"]
shader = ExtResource("2_53ve7")
shader_parameter/speed = 0.6
shader_parameter/threshold = 0.2
shader_parameter/noise_texture = SubResource("NoiseTexture2D_6c5di")

[node name="Portal" type="Area2D" groups=["Portal"]]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("1_h72f4")
active = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_l3iwj")

[node name="TextDisplay" type="Panel" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.784314)
offset_left = -128.0
offset_top = -224.0
offset_right = 128.0
offset_bottom = -136.0

[node name="InteractPrompt" type="Label" parent="TextDisplay"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Press 'E'"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChargingText" type="Label" parent="TextDisplay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Portal Charging
 Please Wait"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_m7ld3")
position = Vector2(1.90735e-06, -64)
scale = Vector2(2, 2)
texture = ExtResource("2_wwjib")
